addressed reviewers comments

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,13 @@
+
+@misc{cyclopts,
+  author = {Matthew Gidden},
+  title = {{Cyclopts}},
+  month = dec,
+  year = {2014},
+  url = {http://mattgidden.com/cyclopts/},
+  howpublished = {\url{http://mattgidden.com/cyclopts/}}
+}
+
 @article{rineiski2011reactivity,
   title={Reactivity Coefficients in BN-600 Core with Minor Actinides},
   author={Rineiski, Andrei and Ishikawa, Makoto and Jang, Jinwook and Mohanakrishnan, Prabhakaran and Newton, Tim and Rimpault, Gerald and Stanculescu, Alexander and Stogov, Victor},
